--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Flask==1.1.2
-requests==2.25.1
-gunicorn
+Flask==2.0.1
+Jinja2==3.0.1
+requests==2.31.0
+gunicorn==21.2.0
+markupsafe==2.0.1
+itsdangerous==2.0.1
+Werkzeug==2.0.1
